--- a/src/Game-pjt-web.html
+++ b/src/Game-pjt-web.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      href="../src/index.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+
     />
   </head>
   <body>
-    <div class="col-12  offset-lg-0 sticky-top">
+   <div class="col-12  offset-lg-0 sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container-fluid">
           <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
@@ -45,6 +46,9 @@
         </div> 
       </nav>
     </div>
+  
+
+  <body background="../img/b22aa22b2f3f55b6468361158d52e2e7.gif">
   
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
