--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-
-    />
-    <link rel="stylesheet" href="style.css">
+      crossorigin="anonymous"/>
+    <link rel="stylesheet" href="../src/index.css">
   </head>
   <body>
-    <div class="col-10  offset-lg-1 sticky-top">
+<div class="menu"
+  <div class="col-10  offset-lg-0 sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container-fluid">
           <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
@@ -40,22 +39,32 @@
                </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#promo">Baixar</a>
+              <a class="nav-link" href="../src/index.html">Baixar</a>
             </li>
           </ul>
           </div>
         </div> 
       </nav>
     </div>
-
-    <div class="inputbox"
-      inputmode="text ="requerid">
+  </div>
+<div class="center">
+    <div class="inputBox">
+     <input type="text" required="required">
     <span>Username</span>
   </div>
 
-  <div class="inputbox"
-      input type="text" requerid="requerid">
+  <div class="inputBox">
+    <input type="text" required="required">
     <span>Passoword</span>
   </div>
+  <div class="senha">
+  <div class="pass">Forgot Password?</div>
+    <input type="submit" value="Login">
+    <div class="signup_link"> 
+      Not a member? <a href="#">Signup</a>
+    </div>
+  </div>
+</div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
