--- a/src/Game-pjt-web.html
+++ b/src/Game-pjt-web.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./index.css"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+    crossorigin="anonymous"/>
+  <link rel="stylesheet" href="../src/index.css">
   </head>
   <body>
    <div class="col-12  offset-lg-0 sticky-top">
@@ -45,9 +46,44 @@
       </nav>
     </div>
 
+
+
+
+
+    
+    <div class="box">
+      <div class="imgBx">
+        <img src="../img/★.jfif">
+        </div>
+      </div class="hot">
+      <h2>Sunny<br><span>hikikomori</span></h2>
+    </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBx">
+        <img src="../img/aubreu (1).jpg">
+      </div>
+      <div class="hot">
+      <h2>Aubrey<br><span>Taino</span></h2>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="imgBx">
+        <img src="../img/kel (1).jpg">
+        </div>
+      <div class="hot">
+      <h2>Kel<br><span>hikikomori</span></h2>
+      </div>
+    </div>
 <img src="../img/Anime Wallpaper Gif Hd (2).gif "loop="loop" style="opacity: 1; width: 1366;height: 744;">
 
        
+
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
   <style> div{ background-color: rgb(10, 10, 10);
   }</style>
