--- a/src/Game-pjt-web.html
+++ b/src/Game-pjt-web.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Document</title>
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -55,16 +55,16 @@
       <div class="imgBx">
         <img src="../img/★.jfif">
         </div>
-      </div class="hot">
+      </div class="content">
       <h2>Sunny<br><span>hikikomori</span></h2>
     </div>
-    </div>
+  </div>
 
     <div class="box">
       <div class="imgBx">
         <img src="../img/aubreu (1).jpg">
       </div>
-      <div class="hot">
+    </div class="content">
       <h2>Aubrey<br><span>Taino</span></h2>
       </div>
     </div>
@@ -73,14 +73,14 @@
       <div class="imgBx">
         <img src="../img/kel (1).jpg">
         </div>
-      <div class="hot">
+      </div class="content">
       <h2>Kel<br><span>hikikomori</span></h2>
-      </div>
+
     </div>
+  </div>
 <img src="../img/Anime Wallpaper Gif Hd (2).gif "loop="loop" style="opacity: 1; width: 1366;height: 744;">
 
-       
-
+  
 
 
 
