--- a/src/index.html
+++ b/src/index.html
@@ -36,11 +36,15 @@
               Flores
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Cestas</a></li>
-              <li><a class="dropdown-item" href="#">Floricultura</a></li>
-              <li><a class="dropdown-item" href="#">Pelúcias</a></li>
-              <li><a class="dropdown-item" href="#">Chocolates</a></li>
-              <li><a class="dropdown-item" href="#">Decorações</a></li>
+              <li><a class="dropdown-item" href="#Promoções">Promoções</a></li>
+              <li>
+                <a class="dropdown-item" href="#Floricultura">Floricultura</a>
+              </li>
+              <li><a class="dropdown-item" href="#Cestas">Cestas</a></li>
+              <li><a class="dropdown-item" href="#Pelúcias">Pelúcias</a></li>
+              <li>
+                <a class="dropdown-item" href="#Chocolates">Chocolates</a>
+              </li>
             </ul>
           </li>
           <li><a href="#">Vasos</a></li>
@@ -57,56 +61,102 @@
           <button class="btn btn-outline-success" type="submit">
             Pesquisar
           </button>
-          </div>
         </form>
       </nav>
-      <h1>Flores</h1>
-        <section class="flex">
-          <div>
-              <img src="../img/Yanyt-removebg-preview.png">
-              <p>legenda</p>
-          </div>
-          <div>
-              <img src="../img/Yanyt-removebg-preview.png">
-              <p>legenda</p>
-          </div>
-          <div>
-              <img src="../img/Yanyt-removebg-preview.png">
-              <p>legenda</p>
-          </div>
-          <div>
-              <img src="../img/Yanyt-removebg-preview.png">
-              <p>legenda</p>
-          </div>       
-          <div>
-             <img src="../img/Yanyt-removebg-preview.png">
-            <p>legenda</p>
-          </div>
-          <div>
-            <img src="../img/Yanyt-removebg-preview.png">
-           <p>legenda</p>
-          </div> 
-          
-          
-        </section>      
+      <h1 id="Promoções">Promoções</h1>
+      <section id="aaaa" class="flex">
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
         </div>
-        <div id="servicos" class="block">
-          <div class="container">
-              <h2 class="title text-center">Nossos Serviços</h2>
-              <h4 class="subtitle text-center mb-4">Et sumi kapa namur aondeai rocus pocus</h4> 
-            <div class="row">
-              <div class="col-lg-3 col-md-6 mb-4 mb-lg-0"></div>
-                <a href="#" class="destaque">
-                  <div class="img-container mb-3">
-                    <img src="../img/Yanyt.png">
-                  </div>
-                  <h5>Et sumi kapo</h5>
-                  <p class="mb-0">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium</p>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
 
-                </a>
-              </div>  
-            </div>
+        <div>
+          <h1></h1>
         </div>
+      </section>
+      <h1 id="Floricultura">Floricultura</h1>
+      <section id="aaaa" class="flex">
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+        <div>
+          <img src="../img/f1.jpg" />
+          <p>legenda</p>
+        </div>
+
+        <div>
+          <h1></h1>
+        </div>
+      </section>
+    </div>
+    <h1 id="Cestas">Cestas</h1>
+    <section id="aaaa" class="flex">
+      <div>
+        <img src="../img/f1.jpg" />
+        <p>legenda</p>
+      </div>
+      <div>
+        <img src="../img/f1.jpg" />
+        <p>legenda</p>
+      </div>
+      <div>
+        <img src="../img/f1.jpg" />
+        <p>legenda</p>
+      </div>
+      <div>
+        <img src="../img/f1.jpg" />
+        <p>legenda</p>
+      </div>
+      <div>
+        <img src="../img/f1.jpg" />
+        <p>legenda</p>
+      </div>
+      <div>
+        <img src="../img/f1.jpg" />
+        <p>legenda</p>
+      </div>
+
+      <div>
+        <h1></h1>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
