--- a/src/Game-pjt-web.html
+++ b/src/Game-pjt-web.html
@@ -13,13 +13,14 @@
   <link rel="stylesheet" href="../src/index.css">
   </head>
   <body>
+    
    <div class="col-12  offset-lg-0 sticky-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container-fluid">
           <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#qs">Personagens</a>
+              <a class="nav-link" aria-current="page" href="box">Personagens</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#promo">Informações</a>
@@ -50,12 +51,12 @@
 
 
 
-    
+    <main class="cards">
     <div class="box">
       <div class="imgBx">
         <img src="../img/★.jfif">
         </div>
-      </div class="content">
+      <div class="content">
       <h2>Sunny<br><span>hikikomori</span></h2>
     </div>
   </div>
@@ -64,7 +65,7 @@
       <div class="imgBx">
         <img src="../img/aubreu (1).jpg">
       </div>
-    </div class="content">
+    <div class="content">
       <h2>Aubrey<br><span>Taino</span></h2>
       </div>
     </div>
@@ -73,19 +74,20 @@
       <div class="imgBx">
         <img src="../img/kel (1).jpg">
         </div>
-      </div class="content">
+      <div class="content">
       <h2>Kel<br><span>hikikomori</span></h2>
 
     </div>
   </div>
-<img src="../img/Anime Wallpaper Gif Hd (2).gif "loop="loop" style="opacity: 1; width: 1366;height: 744;">
+</main>
 
   
+<img src="../img/Anime Wallpaper Gif Hd (2).gif "loop="loop" style="opacity: 1; width: 1366;height: 744;">
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-  <style> div{ background-color: rgb(10, 10, 10);
+  <style> div{ background-color: black;
   }</style>
 
   </body>
