--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <div class="collapse justify-content-center navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#qs">Personagens</a>
+              <a class="nav-link" aria-current="page" href="../src/Game-pjt-web.html">Personagens</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#promo">Informações</a>
@@ -69,6 +69,17 @@
     </div>
   </div>
 </div>
+
+Senha: <input type="password" id="senha"><br>
+  <input type="checkbox" onclick="mostrarOcultarSenha()">Mostrar Senha
+
+
+
+
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript" src="../src/var c = 1.js"></script>
   </body>
 </html>
