--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
         </div>
         <div id="qs" class="col-12 mb-2">
           <img
-            src="c:\Users\Mobile\Desktop\galeria\bem vindo.png"
+            src="../img/bem vindo.png"
             width="100%"
             height="500px"
           />
@@ -116,7 +116,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="c:\Users\Mobile\Desktop\galeria\v2.png"
+                  src="../img/v2.png"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -126,7 +126,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="c:\Users\Mobile\Desktop\galeria\vistos.png"
+                  src="../img/vistos.png"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -174,7 +174,7 @@
         </div>
         <div id="tc1">
           <img
-            src="c:\Users\Mobile\Desktop\galeria\pixel.gif"
+            src="../img/pixel.gif"
             width="100%"
             height="500px"
           />
@@ -183,7 +183,7 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                src="../img/12.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -195,7 +195,7 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\10.png"
+                src="../img/10.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -207,7 +207,7 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                src="../img/12.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -219,7 +219,7 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\12.png"
+                src="../img/12.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -231,7 +231,7 @@
           <div class="col-4">
             <div class="card">
               <img
-                src="c:\Users\Mobile\Desktop\galeria\15.gif"
+                src="../img/15.gif"
                 class="card-img-top"
                 alt="..."
               />
